some more burger fixes and basic info regarding us presidential primary

--- a/child_pages/cc-elections/us_president_demprimary.html
+++ b/child_pages/cc-elections/us_president_demprimary.html
@@ -44,6 +44,22 @@
         </div>
     </div>
 
+    <dialog id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+          <h4 class="quick-sum">quick summary</h4>
+          <h6 class="page-title">Democrat Primary for US President</h6>
+          <p> As you probably know, President Biden is running for re-election. What you might not realize is that he is technically involved in the New Jersey primary race 
+            against Terrisa Bukovinac. Bukovinac, a self-called 'pro-life progressive', admits that she will lose the race against Biden, but she is using it as a platform to 
+            raise awareness of her pro-life platform.
+          </p>
+        </div>
+      
+      </dialog>
+
+
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
     <div id="sample-ballot">
         <div class="sb-top-box"> 
