--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -23,7 +23,7 @@
                 <div>
                     <ul class="links">
                         <li class="link"><a href="../index.html">Home</a></li>
-                        <li class="link"><a href="cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Elections</a></li>
+                        <li class="link"><a href="cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Commissioner Democrat Primary</a></li>
                         <li class="link"><a href="cc-elections/cc_election_issues.html">County Issues</a></li>
                         <li class="link"><a href="cc-elections/us_repubprimary_senate.html">Republican Primary US Senate</a></li>
                         <li class="link"><a href="cc-elections/us_demprimary_senate.html">Democrat Primary US Senate</a></li>
