x icon fix on bukovinac page

--- a/child_pages/cc-elections/Candidates/bukovinac.html
+++ b/child_pages/cc-elections/Candidates/bukovinac.html
@@ -71,7 +71,7 @@
 
             <!-- Modal content -->
             <div class="modal-content">
-              <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Terrisa Bukovinac</h6>
               <p> Bukovinac is a self-probclaimed 'pro-life progressive' who is using the Democrat Primary for president to raise awareness of her agenda. Check out her 
