--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -69,10 +69,17 @@
                             even missing shadow-banned posts.
                             <br>
                             <br>
-                            <center><a href="cc-elections/cc_election_candidates.html">County and State Candidates.</a></center> 
+                            <center><a href="cc-elections/cc_demprimary_county_commissioner_2024.html">County Commissioner Democrat Primary.</a></center> 
                             <br>
-                            <center><a href="vsb-elections/vsb_election_candidates.html">Vineland School Board Candidates</a></center>
+                            <center><a href="cc-elections/us_demprimary_senate.html">US Senate Democrat Primary.</a></center> 
                             <br>
+                            <center><a href="cc-elections/us_repubprimary_senate.html">US Senate Republican Primary.</a></center> 
+                            <br>
+                            <center><a href="cc-elections/us_houseofrepresentatives_demprimary.html">US House of Representatives Democrat Primary.</a></center> 
+                            <br>
+                            <center><a href="cc-elections/us_president_demprimary.html">US President Democrat Primary.</a></center> 
+                            <br>
+                            
                         </li>
                         <li class="gl-li">
                             <strong>Internalize the Popular Issues:</strong> Before you can assess a candidate's suitability, you need 
@@ -83,8 +90,7 @@
                             <br>
                             <center><a href="/child_pages/cc-elections/cc_election_issues.html">County and State Issues.</a></center>
                             <br>
-                            <center><a href="/child_pages/vsb-elections/vsb_election_issues.html">Vineland School Board Issues.</a></center>
-                            <br>
+                            
                         </li>
                         <li class="gl-li">
                             <div class="gl-li-title"><strong>Show Up:</strong> Go to events where candidates will be present and ask 
@@ -102,13 +108,6 @@
                                 <br>
                             </div>
                             <ul class="gi-ul">
-                                <li class="gi-ul-li">
-                                    <strong>NAACP Candidates Forum:</strong> 
-                                    Promising opportunity to get exposure to the candidates in a specific election related event.
-                                    <p>10/16/23 - 6–9 PM</p>
-                                    <p>Bridgeton High School - 111 West Ave N, Bridgeton, NJ 08302</p>
-                                    <br>
-                                </li>
                                 <li class="gi-ul-li">
                                     <strong>Bi-weekly Republican Party Breakfast at Eastlyn Golf Course:</strong> This suggestion isn't meant to be partisan; it's based on the frequency and consistency of these events. At these Saturday morning gatherings, you can meet Republican candidates and ask them election-related questions. There's currently no comparable event for Democrats, as they haven't posted any events on <a href="https://cumberlandnjdems.com/events/">their website</a> in quite some time. <a href="https://informthevotecc.netlify.app/child_pages/events">See our Events page for more info.</a> <a href="https://www.ccrrogop.org/event-calendar">More info also on CCROGOP Website.</a>
                                     <p>**Important Note - The location of these breakfasts are always subject to change, be sure to check event info of each individual event date.</p>
