--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -55,5 +55,10 @@
 
     <h1>Interview with Peter Vallorosi</h1>
     <iframe width="560" height="315" src="https://youtu.be/embed/79RV3xwXHiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <video width="640" height="480" controls>
+        <source src="../assets/videos/testVideo.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </body>
 </html>
