another debug attempt for youtube embed

--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -54,7 +54,7 @@
     </div>
 
     <h1>Interview with Peter Vallorosi</h1>
-    <iframe width="560" height="315" src="https://youtu.be/embed/79RV3xwXHiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=79RV3xwXHiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <video width="640" height="480" controls>
         <source src="../assets/videos/testVideo.mp4" type="video/mp4">
