centering tags for iframe and video tags

--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -54,10 +54,17 @@
     </div>
 
     <h1>Interview with Peter Vallorosi</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=79RV3xwXHiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <center>
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=79RV3xwXHiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </center>
+
+    <br>
+    <br>
 
     <video width="640" height="480" controls>
-        <source src="../assets/videos/testVideo.mp4" type="video/mp4">
+        <center>
+            <source src="../assets/videos/testVideo.mp4" type="video/mp4">
+        </center>
         Your browser does not support the video tag.
     </video>
 </body>
