--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -54,6 +54,16 @@
                     very pure application of the constitution and applying full transparency of government business through a regularly updated, single source 
                     website. He enumerates many ideas throughout his website, including simplifying the tax code, balancing the budget, reducing the size of 
                     government, removing donor influence from politics, and much more. Vallorosi was also very prompt with communicating with Inform the Vote.
+                    He also sat down with us for an interview to dig deeper beyond what is on his site:
+                    <br>
+                    <br>
+                    <div class="video-box">
+                        <h3 class="video-heading">Interview with Peter Vallorosi</h3>
+                    
+                        <iframe src="https://www.youtube.com/embed/79RV3xwXHiY?si=6ZPfnBzq_PPF-Qs5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <br>
+                    <br>
                     Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
@@ -118,6 +128,11 @@
             <br>
             <br>
 
+            <div class="video-box">
+                <h3 class="video-heading">Inform the Vote's Interview with Peter Vallorosi</h3>
+                Digging deeper beyond his website:
+                <iframe src="https://www.youtube.com/embed/79RV3xwXHiY?si=6ZPfnBzq_PPF-Qs5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
             <!-- <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 
