mentioning the facebook group on index page modal and get involved page

--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -53,10 +53,10 @@
         
     </div>
 
-    <div class="video-box">
+    <!-- <div class="video-box">
         <h3 class="video-heading">Interview with Peter Vallorosi</h3>
     
         <iframe src="https://www.youtube.com/embed/79RV3xwXHiY?si=6ZPfnBzq_PPF-Qs5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
+    </div> -->
 </body>
 </html>
