--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -157,6 +157,16 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="gl-li">
+                            <strong>Contribute to the Facebook Group:</strong> There are lots of potential bits of information and reasonable questions that we might miss.
+                            If you are paying attention to election related politics and feel that you can help us by contributing your own ideas regarding relatively objective 
+                            information or have reasonable speculative questions about what exactly is going on, please share it with us at our 
+                            <br>
+                            <br>
+                            <center><a href="https://www.facebook.com/groups/781111154116727">Facebook Group.</a></center>
+                            <br>
+                            
+                        </li>
                     </ol>
                 </div>
         </div>
