--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             Given that we spend a lot of time researching and analyzing voting information, there is a good chance we are making observations the 
             average constituent might not make. We invite you to take a look at our 
             <a href="https://www.informthevotenj.com/child_pages/cc-elections/unanswered_questions">Unanswered Questions</a> page to help bring 
-            awareness to potential gaps in information regarding our county elections.
+            awareness to potential gaps in information regarding our county elections. That being said, there are also a lot of things we might miss. 
+            So if you'd like to help contribute, please join our <a href="https://www.informthevotenj.com/child_pages/cc-elections/unanswered_questions">Facebook Group.</a>
             <br>
             <br>
             Finally, if you're hungry for more in-depth knowledge about our local politics and the methods we used on this 
