--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             average constituent might not make. We invite you to take a look at our 
             <a href="https://www.informthevotenj.com/child_pages/cc-elections/unanswered_questions">Unanswered Questions</a> page to help bring 
             awareness to potential gaps in information regarding our county elections. That being said, there are also a lot of things we might miss. 
-            So if you'd like to help contribute, please join our <a href="https://www.informthevotenj.com/child_pages/cc-elections/unanswered_questions">Facebook Group.</a>
+            So if you'd like to help contribute, please join our <a href="https://www.facebook.com/groups/781111154116727">Facebook Group.</a>
             <br>
             <br>
             Finally, if you're hungry for more in-depth knowledge about our local politics and the methods we used on this 
