rodney deans interview added

--- a/child_pages/cc-elections/Candidates/dean.html
+++ b/child_pages/cc-elections/Candidates/dean.html
@@ -55,7 +55,17 @@
                 He believes the older generation needs to make up for the lack of attention they gave in regards to teaching the younger generations.
                 He also strongly believes that politicians should stay consistent with who they are as opposed to the all too common turncoat practices
                 seen in government. Inform the Vote would also like to mention the prompt and consistent communication when we reached out to him
-                regarding his campaign. Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+                regarding his campaign. 
+                <br>
+                    <br>
+                    <div class="video-box">
+                        <h3 class="video-heading">Our Interview with Rodney Dean</h3>
+                    
+                        <iframe src="https://youtu.be/lkB9qmytjuE?si=WD7PemuRy9WRj9jk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <br>
+                    <br>
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
@@ -157,6 +167,12 @@
             <div class="experience">
             Rodney led an effort in his community to help the youth gain free access to his local YMCA, where 7th-12th graders were
             able to access an array of educational material to help prepare them for the future.
+            </div>
+
+            <div class="video-box">
+                <h3 class="video-heading">Inform the Vote's Interview with Rodney Dean</h3>
+                Digging deeper beyond his website:
+                <iframe src="https://youtu.be/lkB9qmytjuE?si=WD7PemuRy9WRj9jk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             
 
