--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -58,7 +58,7 @@
                     <br>
                     <br>
                     <div class="video-box">
-                        <h3 class="video-heading">Interview with Peter Vallorosi</h3>
+                        <h3 class="video-heading">Our Interview with Peter Vallorosi</h3>
                     
                         <iframe src="https://www.youtube.com/watch?v=dpBg37i9cx0&t=2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
