some updates after reviewing austino and capizolas publicly posted info

--- a/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
+++ b/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
@@ -53,9 +53,18 @@
           <h6 class="page-title">Democrat Primary for County Commissioner</h6>
           <p>This year 2 seats are open on the County Commissioner board. The republicans
             are running two incumbents, and the democrats appear to have one endorsed team on their <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">website</a>
-             : Former Sheriff Austino and former Commissioner Capizola. There is another team, Dr. Perella and Ms. La Rae Smith, who have their own 
-             <a href="https://perellaandsmithforcumberland.com/">website</a>.
-            The two republican incumbents inherently have experience, so it is the opinion of Inform the Vote that there 
+             : Former Sheriff Austino and former Commissioner Capizola, who also appear to have teamed up with Celeste Riley, who will be running for County Clerk against 
+             <a href="https://www.ccrrogop.org/cumberlandcountyclerk2024">Commissioner Lods </a>in the general election, and 
+             <a href="https://www.informthevotenj.com/child_pages/cc-elections/candidates/salerno">Joe Salerno</a>, who is running for House of Representatives as a potential challenger to
+             Jeff Van Drew. 
+             <br>
+             <br>
+             There is another team, Dr. Perella and Ms. La Rae Smith, who have their own <a href="https://perellaandsmithforcumberland.com/">website</a>, and they seem to have teamed up with 
+             <a href="https://www.informthevotenj.com/child_pages/cc-elections/candidates/alexander">Tim Alexander</a>, who is running for House of Representatives as a potential challenger 
+             to Jeff Van Drew.
+            <br>
+            <br>
+            The two republican incumbents for County Commissioner inherently have experience, so it is the opinion of Inform the Vote that there 
             ought to be some kind of discussion as to why challengers would be significantly better or different than the incumbents. Capizola and Austino have more direct 
             experience than Smith and Perella, but Smith and Perella seem to have a much more transparent agenda and have been better about communicating with us. 
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
