finishing up todays updates

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -119,7 +119,8 @@
                     Detroit city jail.</p>
                     
                     <center>
-                    
+                    Strong support for OPRA (Open Public Records Act) <a href="https://www.facebook.com/smithandperella/posts/pfbid02RsussM6z4AwrAVrLyhJNaTroFUQQe2D3TgLnpKBGUD3kAG2psnm1PNR3gsjTDubal" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                    <br>
                     Supported the Middle Mile Grant. Reposted on <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid0TgRBfniPRc2jmMX6UymTMRZwmkriEDsQsyK9AMEvWeWJ1VKAxPSWKBFNo3Hq6Qt2l" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                     <br>
                     Seems to be strongly pro-choice. <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid0mS3sKJiUFdJWJJTejJx1N1Q3h4JUFD9VDHJbCn3cQuRrFNKneJsjE1MhbdXtw2THl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
