--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -116,6 +116,7 @@
 
         <h3 class="sub-heading">individual agenda</h3>
             <div class="agenda-thesis">
+                Strong support for OPRA (Open Public Records Act) <a href="https://www.facebook.com/smithandperella/posts/pfbid02RsussM6z4AwrAVrLyhJNaTroFUQQe2D3TgLnpKBGUD3kAG2psnm1PNR3gsjTDubal" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                 Supports Planned Parenthood. <a href="https://www.facebook.com/ld1njvote/posts/pfbid02SsnRk2YTaTY5XPjtV2Q3HH1Spsnm8FpJUHVTAf94JNneBiWBHxmQVMQxVnSsbZsbl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                 Supports more women representation in government. <a href="https://www.facebook.com/ld1njvote/posts/pfbid02SsnRk2YTaTY5XPjtV2Q3HH1Spsnm8FpJUHVTAf94JNneBiWBHxmQVMQxVnSsbZsbl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                 Supports the black caucuses of the democrat party. Reposted on <a href="https://www.facebook.com/njyoungdems/posts/pfbid0w4svZbLLZNgLdExKmHLsY46uriD3yPjzexzw64Axrne3C4Z23ctu4mH4oimGq4mDl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
