fixed video embeds, added class for videos in modals, added instructions to templatr code on contact page

--- a/child_pages/cc-elections/Candidates/dean.html
+++ b/child_pages/cc-elections/Candidates/dean.html
@@ -58,10 +58,10 @@
                 regarding his campaign. 
                 <br>
                     <br>
-                    <div class="video-box">
+                    <div class="video-box-modal">
                         <h3 class="video-heading">Our Interview with Rodney Dean</h3>
                     
-                        <iframe src="https://youtu.be/lkB9qmytjuE?si=WD7PemuRy9WRj9jk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/lkB9qmytjuE?si=JNMPX9Cq7CJnU92p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <br>
                     <br>
@@ -172,7 +172,7 @@
             <div class="video-box">
                 <h3 class="video-heading">Inform the Vote's Interview with Rodney Dean</h3>
                 Digging deeper beyond his website:
-                <iframe src="https://youtu.be/lkB9qmytjuE?si=WD7PemuRy9WRj9jk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/lkB9qmytjuE?si=JNMPX9Cq7CJnU92p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             
 
