--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -60,8 +60,7 @@
                     <div class="video-box">
                         <h3 class="video-heading">Our Interview with Peter Vallorosi</h3>
                     
-                        <iframe src="https://www.youtube.com/watch?v=dpBg37i9cx0&t=2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
+                        <iframe src="https://www.youtube.com/embed/dpBg37i9cx0?si=DaPCUwVZw9c_oExV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                    </div>
                     <br>
                     <br>
                     Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -131,9 +130,9 @@
             <div class="video-box">
                 <h3 class="video-heading">Inform the Vote's Interview with Peter Vallorosi</h3>
                 Digging deeper beyond his website:
-                <iframe src="https://www.youtube.com/watch?v=dpBg37i9cx0&t=2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/dpBg37i9cx0?si=DaPCUwVZw9c_oExV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            </div>
             </div>
-            <!-- <h4 class="sub-heading">experience</h4>
+                <!-- <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 
             </div> -->
