added vinelands event calendar to get involved page

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -155,6 +155,13 @@
                                     <center><a href="https://www.cumberlandcountynj.gov/meetings">Visit the Cumberland County public meetings calendar for more info.</a></center>
                                     <br>
                                 </li>
+                                <li class="gi-ul-li">
+                                    <strong>City Event Calendars:</strong> Cities like Vineland have many community related events posted. While they may not directly relate to the upcoming election, they provide context for larger political issues and can be beneficial for those with extra time and curiosity.
+                                    <br>
+                                    <br>
+                                    <center><a href="https://www.vinelandchamber.org/events/calendar">Visit the Vineland events calendar for activities that might interest you.</a></center>
+                                    <br>
+                                </li>
                             </ul>
                         </li>
                         <li class="gl-li">
