--- a/child_pages/cc-elections/us_demprimary_senate.html
+++ b/child_pages/cc-elections/us_demprimary_senate.html
@@ -53,20 +53,41 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">Democrat Primary for US Senate</h6>
           <p>This year 1 seat is open in New Jersey for the US Senate, where incumbent Bob Menendez is likely to face serious challenges considering a recent
-            scandal regarding alleged corruption.  Three candidates are running for the Democrat nomination:
+            scandal regarding alleged corruption.  Three candidates are running for the Democrat nomination: Patricia Campos-Median, Lawrence Hamm, and Andy Kim. All three
+            candidates have similar views and methods of handling the following issues: Reducing SALT (state and local taxes), immigration reform, police reform, wind energy, 
+            the climate crisis, social justice issues, and providing free child care services (though you should watch the debates and interviews if you're interested in the nuances). 
+            During a primary debate, they answered the same in a rapid-fire yes/no question format on the following issues: They would expand the supreme court, they would end the 
+            filibuster, they would have no compromises on abortion, they all support reparations, and they would not expand the definition of anti-semitism. Here are the clear differences 
+            that we've been able to glean, though you should always double-check our work:
         
             <br>
-            Patricia Campos-Medina is a first-generation American who has been a union and community organizer for over 30 years who has worked for 
-            or received appointments from presidents such as Clinton, Bush, and Obama.
             <br>
-            Lawrence Hamm has been an advocate for African-Americans, human rights, and civil rights for over 52 years and at age 20 was the youngest 
-            councilman ever to be appointed in Newark.
+            Patricia Campos-Medina has said in her own words that she is the only woman and so she will be the strongest advocate for reproductive rights. She is also the only Latina 
+            candidate, so she will be the strongest advocate for women and latin-americans. She also positions herself as the strongest advocate for workers rights, such as her support for 
+            unions throughout the year. For military aid, she supports aid to Ukraine to support democracy, but opposes aid to Israel for concerns over genocide. She is the only of the 
+            three that supports the TikTok ban. She, along with candidate Hamm, also states/implies that candidate Kim is a middle-of-the-road democrat who has not made enough progress 
+            for left-leaning issues.
             <br>
-            Andy Kim was a Rhoads scholar who has been a national security expert at the Pentagon and a civilian advisor to the military in Afghanistan.
+            <br>
+            Lawrence Hamm positions himself as the strongest candidate for overall social issues, as he has been an advocate and activist for them for over 50 years. He is clearly the most 
+            anti-war candidate, as he doesn't support either the Israel or Ukraine war, and says that money would be better spent at home for Americans. He is against the TikTok ban. He 
+            also seems to blame Kim for a lack of progress on left-leaning issues over the past 6 years while Kim has been a congressman.
+            <br>
+            <br>
+            Andy Kim seems to be more of a moderate democrat than the other 2 candidates. When asked about his vote to support funding the wars in Israel and Ukraine, he said he would do it again. 
+            He is against the TikTok ban. When asked about the lack of progress for left-leaning issues, he has a tendency to blame Trump and the GOP for not being cooperative, and therefore 
+            his thought is that the Democrat party needs to build up there base of registered voters, which would give Democrat congress-people more bargaining power when attempting to 
+            address their issues.
+            <br>
+            <br>
+            WNYC US Senate - Democrat Primary Debate <a href="https://www.wnyc.org/story/wnyc-co-hosts-nj-senate-democratic-primary-debate-may-13/" target="_blank" rel="noopener noreferrer" class="website-link">WNYC Website</a>
+            <br>
             <br>
             PBS Interview with all 3 candidates discussing top issues. <a href="https://www.youtube.com/watch?v=PJuTJqsgD9Y" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
             <br>
+            <br>
             Article covering Jersey City Candidates forum.  <a href="https://hudsoncountyview.com/campos-medina-hamm-kim-come-to-jersey-city-for-u-s-senate-forum/" target="_blank" rel="noopener noreferrer" class="website-link">Hudson County View</a>
+            <br>
             <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
