capizola and austino updates

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -53,7 +53,10 @@
                 assume by surface level comparison that Austino and Capizola would be more center-left than Smith and Perella. Some quick points of note are that 
                 he seems to have a moderate stance on gun control, supports armed security in schools, and supported the middle mile broadband grant. He also has 
                 spoken against school vouchers, he hopes to make local politics less partisan, and he supports better transparency and communication between the 
-                government and constituents. Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+                government and constituents. In terms of specific agenda should he get elected, his focus seems to be to improve roads/infrastructure/broadband, 
+                to support senior housing and healthcare, and to provide recreational advancements. 
+                <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">Facebook source</a> Click the red x at the top of this 
+                box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
           
@@ -104,8 +107,9 @@
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                As of 4/22/2024, Inform the Vote has scoured the internet and attempted to contact the former Commissioner multiple times. There seems to be no 
-                relevant information about his specific agenda for being a County Commissioner moving forward as opposed to prior years.
+                As of 5/20/2024, Inform the Vote has scoured the internet and attempted to contact the former Commissioner multiple times. In terms of specific agenda, there only 
+                seems to be a campaign picture on his <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">facebook campaign site</a> regarding 
+                improving roads/infrastructure/broadband, supporting senior housing and healthcare, and providing recreational advancements.
             </div>
 
             <br>
