--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -53,7 +53,8 @@
               <h6 class="page-title">Robert A. Austino</h6>
               <p>Former Sheriff Austino is a democrat who appears to be running with former commissioner Capizola 
               'against' candidates Smith and Perella. The sheriff has lengthy experience working in government as sheriff, but no direct experience as a 
-              commissioner. There seems to be no easily accessible information regarding his platform or agenda. 
+              commissioner. As per a campaign picture on his <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">facebook campaign site</a>, his agenda 
+              seems to be to improve road/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements. 
               </p>
               <p>              
                 Also, Inform the Vote has not yet received a
@@ -109,8 +110,11 @@
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                As of 4/22/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. There seems to be no 
-                relevant information about his specific agenda for being a County Commissioner.
+                As of 5/20/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. In regards to his specific agenda, there only seems 
+                to be a campaign picture on his <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">facebook campaign site</a>, which states he plans 
+                to improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements.
+                
+                
             </div>
 
             <br>
@@ -126,8 +130,8 @@
 
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
-                As of 4/22/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. There seems to be no 
-                specific information about his policy ideas for his potential election as County Commissioner.
+                As of 5/20/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. The only available information regarding specific 
+                policy positions.
 
             </div>
 
