some more updates

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -64,6 +64,24 @@
 
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>NJ Globe - Meet the Candidates</strong></li>
+                    <li class="description">An interview with Curtis Bashaw <a href="https://twitter.com/wildstein/status/1791463453414056109">Details on Twitter/X</a></li>
+                    <li class="date-and-time">05/20/24 - 8:00pm</li>
+                    <li class="location">Live streaming on various platforms</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Coffee with Curtis - Meet and Greet</strong></li>
+                    <li class="description">A chance to meet Republican primary candidate for US Senate <a href="https://www.facebook.com/photo/?fbid=122146095872190498&set=a.122114687624190498">Details on Facebook</a></li>
+                    <li class="date-and-time">05/22/24 - 10:30am</li>
+                    <li class="location">South Side Diner, 1803 NJ-35, South Amboy NJ, 08879</li>
+                </ul>
+            </div>
+
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Campaign Fundraiser for Candidates Riley, Austino, and Capizola</strong></li>
                     <li class="description">Support event for the candidates. <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">Details on Facebook</a></li>
                     <li class="date-and-time">05/22/24 - 5:30 pm</li>
