--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -102,6 +102,30 @@
         <br>
         <br>
 
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>NJ Globe - Meet the Candidates</strong></li>
+                <li class="description">An interview with Curtis Bashaw <a href="https://twitter.com/wildstein/status/1791463453414056109">Details on Twitter/X</a></li>
+                <li class="date-and-time">05/20/24 - 8:00pm</li>
+                <li class="location">Live streaming on various platforms</li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+
+        <div class="event-card">
+            <ul class="event-info">
+                <li class="name"><strong>Coffee with Curtis - Meet and Greet</strong></li>
+                <li class="description">A chance to meet Republican primary candidate for US Senate <a href="https://www.facebook.com/photo/?fbid=122146095872190498&set=a.122114687624190498">Details on Facebook</a></li>
+                <li class="date-and-time">05/22/24 - 10:30am</li>
+                <li class="location">South Side Diner, 1803 NJ-35, South Amboy NJ, 08879</li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+
         Campaign Related Interview <a href="https://www.youtube.com/watch?v=9zvFcFJBpLw" target="_blank" rel="noopener noreferrer" class="website-link">YouTube</a>
 
         <br>
