updated contact email

--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -47,7 +47,7 @@
 
     <div class="contact">
         <p>
-            For any and all inquiries, reach out to Inform The Vote by <a href="mailto:informthevotecc@gmail.com">email</a>.
+            For any and all inquiries, reach out to Inform The Vote by <a href="mailto:admin@informthevotenj.com">email</a>.
         </p>
         <p>This site was built by <a href="mailto:pierrelampre@gmail.com">Lampelights Web Craft</a>.</p>
         
