addition of murphy email responses to his modal and page

--- a/child_pages/cc-elections/Candidates/murphy.html
+++ b/child_pages/cc-elections/Candidates/murphy.html
@@ -51,8 +51,9 @@
               <p>
                 Candidate Murphy is a big advocate for military strength to help overall American prosperity. From increasing the military budget to be able to fund two wars 
                 simultaneously, to securing the border with military resources, and increasing military presence in the South China Sea. He advocates for a 12% flat tax, 
-                balancing the budget through a constitutional amendment, pro-life policy, and other common conservative beliefs. Click the red x at the top of this box and then 
-                scroll down down for more in-depth information and sources.
+                balancing the budget through a constitutional amendment, pro-life policy, and other common conservative beliefs. Also, when asked via email how he would differentiate 
+                himself from the other candidates and how he might specifically help Cumberland County, he provided some in-depth answers which you can find at the bottom of this page.
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
@@ -211,9 +212,49 @@
 
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
-                Self-employed small businessman.
+                Murphy is a navy vet, a lawyer, an author, a former deputy mayor of Tabernacle Township, and a self-employed small business owner.
             </div>
 
+            <br>
+            <br>
+
+            <h4 class="sub-heading">Email Correspondence with InformTheVoteNJ</h4>
+            <div class="experience">
+                After reviewing all the candidates and Candidate Murphy’s website, we wrote to Murphy via email to dig a little deeper and get some clarification in some areas:
+                <br>
+                <br>
+                1.	Our first question was in regards to Murphy’s background that would be relevant for a US Senate seat, as their was no clear bio section on his website. He responded 
+                by pointing out he is a navy veteran, a lawyer, an author, a former deputy mayor for Tabernacle Township, and a self-employed small business owner.
+                <br>
+                <br>
+                2.	With such a large amount of candidates in the primaries and the incumbent Bob Menendez involved in this race, it can be overwhelming trying to differentiate all the 
+                candidates. So we asked Murphy to differentiate himself in his own words.
+                <br>
+                A.	Differentiation from other Republican candidates – He says he has offered a more detailed set of policy positions, as shown by his senate pledge (on his website). 
+                He also said he is the only Republican candidate to receive a recommendation from NJ Right-to-Life (a grassroots pro-life organization).
+                <br>
+                B.	Differentiation from Democrat candidates – “My vision for America is antithetical to the democrat vision.  I believe in America, our Constitution, freedom, 
+                our Bill-of-Rights, private property, limited government, school choice for parents and parental rights, secure borders, a strong military, and national sovereignty.  
+                Democrats do not.”
+                <br>
+                C.	Differentiation from Bob Menendez (independent incumbent) – “Bob Menendez is a democrat, a corrupt one at that.”
+                <br>
+                <br>
+                3.	Given that InformTheVoteNJ.com comes from the perspective of Cumberland County residents, we asked Murphy to address how he might specifically help our County, 
+                while mentioning specific issues such as a lack of press coverage, under-developed infrastructure, and significant poverty rates.
+                <br>
+                “Pro-economic growth policies at the federal level will be the rising tide that lifts all boats - specifically, I will advocate for abolishing the IRS and Internal Revenue 
+                Code and implementing a Flat Tax; grow and expand American energy production; block grant federal funds to Trenton for Enterprise Zones, incentives for business seed and 
+                expansion.  Launch a pilot program to use Photovoltaic power generation to attract large-scale manufacturing in economically depressed areas.” To note, after some quick 
+                research, InformTheVoteNJ is assuming photovoltaic power generation means ‘solar panels’.
+                <br>
+                <br>
+                4.	Finally, we asked if there was any information that would help voters differentiate himself from other candidates. He said that he is a conservative, pro-life, 
+                Reagan Republican whose primary concerns are parental rights, immigration, inflation, and economic growth.
+
+
+
+            </div>
     </div>
  </div>   
 </body>
