vineland environmental commission issues added to issues page

--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -76,6 +76,47 @@
                     </div>
                 </div>
                 <div class="issues-card">
+                    <h5 class="issues-sub-heading">Environmental Issues</h5>
+                    <div class="issues-sub-content">
+                        On the weekend of May 18th at the VHS Wellness Fair, we were able to speak with a representative of the Vineland Environmental Commission and dig into some of 
+                        the environmental issues going on in the county.
+                        <br>
+                        <br>
+                        <ul>
+                            <li>1. Street trees not being replaced – When new construction is done throughout the city of Vineland, oftentimes trees are taken out during the process. 
+                                While the city should replace these trees for overall beautification of the city and air quality concerns, oftentimes this is overlooked.</li>
+                                <br>
+                            <li>2. Stormwater - When it rains, the water that hits the streets brings out dirt and oils. Usually, this water goes into storm drains which hurts rivers and streams. 
+                                We could instead build waterways that would redirect the water to the natural grass and dirt grounds, like lawns, which would act as a natural filtration system with 
+                                the soil. Also, sometimes impervious surfaces which are not meant for certain areas, are created during construction projects because planning and zoning boards grant 
+                                inappropriate waivers for impervious surfaces. This basically means natural ground that would act as a natural filtrations system for dirty water is instead replaced 
+                                with surfaces like roads, concrete, etc.</li>
+                                <br>
+                            <li>3. Over-mowing - Many areas do not need to be mowed. But when we do mow them out of habit, we reduce the amount of pollinators. Pollinators are the type of 
+                                vegetation that bees need to survive, and bees have been facing endangerment for a long time. A simple solution would be to raise awareness that many areas, 
+                                like many roadsides, don’t need to be mowed.</li>
+                                <br>
+                            <li>4. Over-fertilization of ponds – Many areas near ponds have runoff during storms that gets into the ponds. Oftentimes this runoff has a lot of fertilizer in it. When the 
+                                fertilizer gets into the pond, pond vegetation grows way too much, which needs to then be dredged (cleaned out), which is very expensive. Finding a way to prevent 
+                                over-fertilization of ponds could save us a lot of money.</li>
+                                <br>
+                                <li>5. Litter – Littering is still a big problem in the area and should be addressed. One interesting angle on this is the recent abolition of single use 
+                                    plastic-bags. With that step, there was an immediate reduction in litter throughout the county. Similar steps could be made to reduce litter throughout 
+                                    the county.</li>
+                                    <br>
+                                    <li>6. ATVs – In addition to the common problems associated with ATVs (like dangerous driving conditions), oftentimes they also cause an environmental 
+                                        problem. While there are some designated areas for drivers to use their ATVs, oftentimes people drive them wherever they want anyway, to the extent 
+                                        where endangered vegetation areas are being ruined, even when signage is posted not to drive there.</li>
+                                        <br>
+                                        <li>7. Local food – Oftentimes our local grocery stores are not using locally produced food. One example of this is that our local blueberries being 
+                                            grown in Hammonton are being shipped down to stores like Publix down in Florida. Meanwhile, we are shipping in blueberries from other areas. 
+                                            Food costs and gas emissions could be significantly reduced with better produce logistics.</li>
+                                            
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="issues-card">
                     <h5 class="issues-sub-heading">Middle Mile Broadband</h5>
                     <div class="issues-sub-content">
                         This was the most popular issue over last year and continues to be a part of ongoing disucssions in the county. 
