rewording of zoning waivers, as per representatives request

--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -89,7 +89,7 @@
                             <li>2. Stormwater - When it rains, the water that hits the streets brings out dirt and oils. Usually, this water goes into storm drains which hurts rivers and streams. 
                                 We could instead build waterways that would redirect the water to the natural grass and dirt grounds, like lawns, which would act as a natural filtration system with 
                                 the soil. Also, sometimes impervious surfaces which are not meant for certain areas, are created during construction projects because planning and zoning boards grant 
-                                inappropriate waivers for impervious surfaces. This basically means natural ground that would act as a natural filtrations system for dirty water is instead replaced 
+                                'variance waivers' for impervious surfaces. This basically means natural ground that would act as a natural filtration system for dirty water is instead replaced 
                                 with surfaces like roads, concrete, etc.</li>
                                 <br>
                             <li>3. Over-mowing - Many areas do not need to be mowed. But when we do mow them out of habit, we reduce the amount of pollinators. Pollinators are the type of 
