--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -35,6 +35,7 @@
                         <li class="link"><a href="../cc-elections/unanswered_questions.html">Unanswered Questions</a></li> -->
                         <li class="link"><a href="get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="events.html">Events</a></li>
+                        <li class="link"><a href="resources-archives-and-rabbit-holes.html">Resources, Archives, and Rabbit Holes</a></li>
                         <!-- <li class="link"><a href="..candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li> -->
                         <li class="link"><a href="about.html">About</a></li>
                         <li class="link"><a href="contact.html">Contact</a></li>
