--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <li class="link"><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li> -->
                         <li class="link"><a href="child_pages/get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="child_pages/events.html">Events</a></li>
+                        <li class="link"><a href="child_pages/resources-archives-and-rabbit-holes.html">Resources, Archives, and Rabbit Holes</a></li>
                         <!-- <li class="link"><a href="child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li> -->
                         <li class="link"><a href="child_pages/about.html">About</a></li>
                         <li class="link"><a href="child_pages/contact.html">Contact</a></li>
