resources, archives, and rabbit holes added to index menu

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                     <div class="events-nav">
                         <a href="child_pages/events.html" class="events-link">Events</a>
                     </div>
+                    <div class="resources-archives-and-rabbit-holes-nav">
+                        <a href="child_pages/resources-archives-and-rabbit-holes.html" class="events-link">Resources, Archives, and Rabbit-Holes</a>
+                    </div>
                     <div class="about-nav">
                         <a href="child_pages/about.html" class="about-link">About</a>
                     </div>
