--- a/child_pages/resources-archives-and-rabbit-holes.html
+++ b/child_pages/resources-archives-and-rabbit-holes.html
@@ -53,7 +53,7 @@
                 <div class="get-involved-intro-content">
                     Essentially, there is no textbook or primer on Cumberland County local politics. However, the longer we research, the more pieces of information we come across. 
                     As we collect and consolidate these various, scattered pieces of the puzzle, they need to go somewhere that is easily accessible so curious voters can examine them 
-                    for themselves before we can put them in a neat, easily digestible package. So here is a page for bits of info that might help citizens understand more generally 
+                    for themselves before we can put them in a neat, easily digestible package. So here is a page for bits of info that might help citizens more generally 
                     understand what's going on in the county to help inform their vote, without the pieces of info being 100 percent categorized or directly relevant to the current 
                     elections.
                 </div>
