--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <a href="child_pages/events.html" class="events-link">Events</a>
                     </div>
                     <div class="resources-archives-and-rabbit-holes-nav">
-                        <a href="child_pages/resources-archives-and-rabbit-holes.html" class="events-link">Resources, Archives, and Rabbit-Holes</a>
+                        <a href="child_pages/resources-archives-and-rabbit-holes.html" class="events-link">Extra Info</a>
                     </div>
                     <div class="about-nav">
                         <a href="child_pages/about.html" class="about-link">About</a>
