tim alexander meet and greet added

--- a/child_pages/cc-elections/Candidates/alexander.html
+++ b/child_pages/cc-elections/Candidates/alexander.html
@@ -97,10 +97,10 @@
 
         <div class="event-card">
             <ul class="event-info">
-                <li class="name"><strong>Atlantic City Women's March with Tim Alexander</strong></li>
-                <li class="description">Join and meet Tim Alexander <a href="https://www.facebook.com/timalexanderforcongress/posts/pfbid021fFRdDs8Kt5UysUf6LG4YfLPj6tSm1AGi6cJqSJnrni6gCbrxGsHgJpSkzM735q1l">Details on Facebook</a></li>
-                <li class="date-and-time">05/18/24 - 10:00 am</li>
-                <li class="location">Rhode Island Ave and The Boardwalk, Atlantic City NJ, 08401</li>
+                <li class="name"><strong>Millville Democratic Organization - Meet and Greet</strong></li>
+                <li class="description">Join and meet Tim Alexander <a href="https://www.facebook.com/events/864258678847344?ref=newsfeed">Details on Facebook</a></li>
+                <li class="date-and-time">05/30/24 - 5:30 pm</li>
+                <li class="location">Millville Brewery, 10 Peterson St., Millville NJ, 08332</li>
             </ul>
         </div>
 
