--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -56,49 +56,13 @@
 
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>US Senate Candidate Forum at Bethany Baptist Church</strong></li>
-                    <li class="description">A chance to hear from candidates Campos-Medina, Hamm, Harshaw, and Kim <a href="https://www.facebook.com/photo/?fbid=808923321270025&set=a.348865030609192">Details on Facebook</a></li>
-                    <li class="date-and-time">05/20/24 - 6:00 pm</li>
-                    <li class="location">275 West Market St, Newark NJ, 07103</li>
+                    <li class="name"><strong>Millville Democratic Organization - Meet and Greet</strong></li>
+                    <li class="description">Join and meet Tim Alexander <a href="https://www.facebook.com/events/864258678847344?ref=newsfeed">Details on Facebook</a></li>
+                    <li class="date-and-time">05/30/24 - 5:30 pm</li>
+                    <li class="location">Millville Brewery, 10 Peterson St., Millville NJ, 08332</li>
                 </ul>
             </div>
-
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>NJ Globe - Meet the Candidates</strong></li>
-                    <li class="description">An interview with Curtis Bashaw <a href="https://twitter.com/wildstein/status/1791463453414056109">Details on Twitter/X</a></li>
-                    <li class="date-and-time">05/20/24 - 8:00pm</li>
-                    <li class="location">Live streaming on various platforms</li>
-                </ul>
-            </div>
-
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Coffee with Curtis - Meet and Greet</strong></li>
-                    <li class="description">A chance to meet Republican primary candidate for US Senate <a href="https://www.facebook.com/photo/?fbid=122146095872190498&set=a.122114687624190498">Details on Facebook</a></li>
-                    <li class="date-and-time">05/22/24 - 10:30am</li>
-                    <li class="location">South Side Diner, 1803 NJ-35, South Amboy NJ, 08879</li>
-                </ul>
-            </div>
-
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Campaign Fundraiser for Candidates Riley, Austino, and Capizola</strong></li>
-                    <li class="description">Support event for the candidates. <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">Details on Facebook</a></li>
-                    <li class="date-and-time">05/22/24 - 5:30 pm</li>
-                    <li class="location">Terra Nono Winery, 370 Garrison Road, Millville NJ, 08332</li>
-                </ul>
-            </div>
-
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>CCRRO Breakfast Meeting</strong></li>
-                    <li class="description">Hear the current Cumberland County Republicans messaging and meet the party.</li>
-                    <li class="date-and-time">05/25/24 - 8:30 am</li>
-                    <li class="location">Mauricetown Fire Hall, 9544 Noble St, Mauricetown, NJ, 08329</li>
-                </ul>
-            </div>
-
+            
             <div class="event-card">
                 <ul class="event-info">
                     <li class="name"><strong>Get Out The Vote Calling - Democrats</strong></li>
